--- a/index.html
+++ b/index.html
@@ -2,16 +2,39 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DBZ Full Time</title>
-    <link rel="stylesheet" href="Stylo/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Previa de web anime</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <title>
-        <h1>Dragon Ball Full Time!</h1>
-    </title>
-    
+    <main>
+        <h1>Anime Full</h1>
+        <aside>
+            <a href="https://github.com/gustavoguanabara/html-css/tree/master/exercicios" target="_blank"><img src="https://pa1.narvii.com/6861/57d2881a49fda3b4d4607cfd7dd2f3712ba9dbe5r1-540-304_hq.gif" alt="Visual Studio Code"></a>
+            <p>Quer ter acesso aos códigos-fonte dos exercícios a seguir? Acesse a <a href="https://github.com/gustavoguanabara/html-css/tree/master/exercicios" target="_blank">área do repositório com todas as pastas e arquivos</a> para cada exercício.</p>
+        </aside>
+
+        <aside>
+            <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank"><img src="https://gustavoguanabara.github.io/html-css/imagens/pdf-icon.png" alt="Material em PDF"></a>
+            <p>Temos ainda algumas apostilas para a complementação do aprendizado. Para acessá-las, vá até a <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank">área do repositório com os arquivos PDF</a> com o material escrito.</p>
+        </aside>
+        <h2>&#x1F4C1; Modo Sessão por Temporada</h2>
+        <ul>
+            <li><a href="modulo-01/ex001/index.html">Um HTML simples</a></li>
+            <li><a href="modulo-01/ex002/index.html">Parágrafos, quebras e emojis</a></li>
+            <li><a href="modulo-01/ex003/index.html">Inserindo imagens simples</a></li>
+            <li><a href="modulo-01/ex004/index.html">Utilizando favicons</a></li>
+            <li><a href="modulo-01/ex006/index.html">Hierarquia de títulos</a></li>
+            <li><a href="modulo-01/ex007/index.html">Formatações de textos em HTML5</a></li>
+            <li><a href="modulo-01/ex008/index.html">Formatações de códigos, citações e abreviações.</a></li>
+            <li><a href="modulo-01/ex009/index.html">Listas em HTML5</a></li>
+            <li><a href="modulo-01/ex010/index.html">Links internos, externos e de downloads</a></li>
+            <li><a href="modulo-01/ex011/index.html">Imagens dinâmicas e áudio</a></li>
+            <li><a href="modulo-01/ex012/index.html">Vídeos em HTML5</a></li>
+            <li><a href="modulo-01/ex013/index.html">Usando estilos in-line</a></li>
+            <li><a href="modulo-01/ex014/index.html">Usando estilos internos</a></li>
+            <li><a href="modulo-01/ex015/index.html">Usando estilos externos</a></li>
+        </ul>
+    </main>
 </body>
 </html>
