--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="menu-trigger" id="menu-trigger">
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+<nav class="menu-hidde" id="menu-hidde">
+	<ul>
+		<li><a href="modulo-01/index.html"target="_blank">Drago Ball</a></li>
+		<li>item2</li>
+		<li>item3</li>
+		<li>item4</li>
+	</ul>
+</nav>
+    
     <main>
         <h1>Anime Full</h1>
         <aside>
@@ -20,7 +34,7 @@
         </aside>
         <h2>&#x1F4C1; Modo Sessão por Temporada</h2>
         <ul>
-            <li><a href="modulo-01/ex001/index.html">Um HTML simples</a></li>
+            <li><a href="modulo-01/index.html">Um HTML simples</a></li>
             <li><a href="modulo-01/ex002/index.html">Parágrafos, quebras e emojis</a></li>
             <li><a href="modulo-01/ex003/index.html">Inserindo imagens simples</a></li>
             <li><a href="modulo-01/ex004/index.html">Utilizando favicons</a></li>
@@ -36,5 +50,15 @@
             <li><a href="modulo-01/ex015/index.html">Usando estilos externos</a></li>
         </ul>
     </main>
+    <script src="javascript.js"></script>
+    <footer class="rodape-prin">
+        <!--<ul class="icones-sociais">
+            <li><a href="https://twitter.com/oOoArcanjooOo" target="_blank"><img src="Icones/twitter.png" alt="Icone do Twitter"></a></li>
+            <li><a href="https://www.linkedin.com/in/patrick-ant%C3%B4nio-santos-oliveira-9b2026150/" target="_blank"><img src="Icones/linkedin.png" alt="Icone do Linkedin"></a></li>
+            <li><a href="https://github.com/FROST-BR" target="_blank"><img src="Icones/github.png" alt="Icone do GitHub"></a></li>
+        </ul>-->
+        &copy; © 2022 - Meus Animes - Todos os Direitos Reservados
+        Esse site não hospeda nenhum vídeo em seu servidor. Todo o conteúdo é disponibilizado por terceiros não afiliados. 2022  
+        </footer>
 </body>
 </html>
