--- a/modulo-01/index.html
+++ b/modulo-01/index.html
@@ -4,17 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            background-color: rgb(69, 69, 69);
-            font: 13pt Arial;
-            background-image:url('/coku.jpg');
-            
-        }
-        title {
-            tex
-        }
-    </style>
+    <title>DB</title>
+   <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
@@ -26,6 +17,15 @@
         <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/03.MP4" target="_blank">3º Episodio</a></li>
         <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/04.MP4" target="_blank">4º Episodio</a></li>
         <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/05.MP4" target="_blank">5º Episodio</a></li>
+        <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/06.MP4" target="_blank">6º Episodio</a></li>
+        <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/07.MP4" target="_blank">7º Episodio</a></li>
+        <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/08.MP4" target="_blank">8º Episodio</a></li>
+        <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/09.MP4" target="_blank">9º Episodio</a></li>
+        <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/10.MP4" target="_blank">10º Episodio</a></li>
+        <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/11.MP4" target="_blank">11º Episodio</a></li>
+        <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/12.MP4" target="_blank">12º Episodio</a></li>
+        <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/13.MP4" target="_blank">13º Episodio</a></li>
+        <li><a href="https://ns5009586.ip-15-235-14.net/Animes/D/dragon-ball-dublado/14.MP4" target="_blank">14º Episodio</a></li>
         <li>segundo item</li>
         <li>terceiro item</li>
       </ul></title>
