--- a/index.html
+++ b/index.html
@@ -2,63 +2,29 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Previa de web anime</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curso em Vídeo</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <div class="menu-trigger" id="menu-trigger">
-		<div></div>
-		<div></div>
-		<div></div>
-	</div>
-<nav class="menu-hidde" id="menu-hidde">
-	<ul>
-		<li><a href="modulo-01/index.html"target="_blank">Drago Ball</a></li>
-		<li>item2</li>
-		<li>item3</li>
-		<li>item4</li>
-	</ul>
-</nav>
-    
     <main>
-        <h1>Anime Full</h1>
-        <aside>
-            <a href="https://github.com/gustavoguanabara/html-css/tree/master/exercicios" target="_blank"><img src="https://pa1.narvii.com/6861/57d2881a49fda3b4d4607cfd7dd2f3712ba9dbe5r1-540-304_hq.gif" alt="Visual Studio Code"></a>
-            <p>Quer ter acesso aos códigos-fonte dos exercícios a seguir? Acesse a <a href="https://github.com/gustavoguanabara/html-css/tree/master/exercicios" target="_blank">área do repositório com todas as pastas e arquivos</a> para cada exercício.</p>
-        </aside>
-
-        <aside>
-            <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank"><img src="https://gustavoguanabara.github.io/html-css/imagens/pdf-icon.png" alt="Material em PDF"></a>
-            <p>Temos ainda algumas apostilas para a complementação do aprendizado. Para acessá-las, vá até a <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank">área do repositório com os arquivos PDF</a> com o material escrito.</p>
-        </aside>
-        <h2>&#x1F4C1; Modo Sessão por Temporada</h2>
-        <ul>
-            <li><a href="modulo-01/index.html">Um HTML simples</a></li>
-            <li><a href="modulo-01/ex002/index.html">Parágrafos, quebras e emojis</a></li>
-            <li><a href="modulo-01/ex003/index.html">Inserindo imagens simples</a></li>
-            <li><a href="modulo-01/ex004/index.html">Utilizando favicons</a></li>
-            <li><a href="modulo-01/ex006/index.html">Hierarquia de títulos</a></li>
-            <li><a href="modulo-01/ex007/index.html">Formatações de textos em HTML5</a></li>
-            <li><a href="modulo-01/ex008/index.html">Formatações de códigos, citações e abreviações.</a></li>
-            <li><a href="modulo-01/ex009/index.html">Listas em HTML5</a></li>
-            <li><a href="modulo-01/ex010/index.html">Links internos, externos e de downloads</a></li>
-            <li><a href="modulo-01/ex011/index.html">Imagens dinâmicas e áudio</a></li>
-            <li><a href="modulo-01/ex012/index.html">Vídeos em HTML5</a></li>
-            <li><a href="modulo-01/ex013/index.html">Usando estilos in-line</a></li>
-            <li><a href="modulo-01/ex014/index.html">Usando estilos internos</a></li>
-            <li><a href="modulo-01/ex015/index.html">Usando estilos externos</a></li>
-        </ul>
+        <header>
+            <h1>Amime Full</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
+        </header>
+        <article>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
+        </article>
+        <article>
+            <h2>Dragon Ball Classico</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p><abbr title="JavaScript">Dragon Ball </abbr> Dragon Ball Classico</abbr> Mais do que um clássico, Dragon Ball é revolucionário e um ícone. Goku, é um dos personagens mais famosos da cultura mundial e até hoje influencia a industria. O mangá de Akira Toryiama venceu barreiras japonesas e faz parte da infância de pessoas ao redor do mundo.<abbr title="Document Object Model"></abbr>.</p>
+            <p><a href="curso-js.html">Acesse a Saga do Pilaf</a></p>
+           
+        </article>
     </main>
-    <script src="javascript.js"></script>
-    <footer class="rodape-prin">
-        <!--<ul class="icones-sociais">
-            <li><a href="https://twitter.com/oOoArcanjooOo" target="_blank"><img src="Icones/twitter.png" alt="Icone do Twitter"></a></li>
-            <li><a href="https://www.linkedin.com/in/patrick-ant%C3%B4nio-santos-oliveira-9b2026150/" target="_blank"><img src="Icones/linkedin.png" alt="Icone do Linkedin"></a></li>
-            <li><a href="https://github.com/FROST-BR" target="_blank"><img src="Icones/github.png" alt="Icone do GitHub"></a></li>
-        </ul>-->
-        &copy; © 2022 - Meus Animes - Todos os Direitos Reservados
-        Esse site não hospeda nenhum vídeo em seu servidor. Todo o conteúdo é disponibilizado por terceiros não afiliados. 2022  
-        </footer>
 </body>
 </html>
