--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Blech</a>
+                        <a href="#">Bleach</a>
                     </li>
 
                 </ul>
