--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
                         <p class="bord">Animes<a href="001.html">click aqui</a></p>
                     </li>
 
-                    <li>
-                        <a href="#">Samarai X</a>
+                    <li class="weap">
+                        <p class="bord">Desenhos<a href="001.html">click aqui</a></p>
                     </li>
 
-                    <li>
-                        <a href="#">Naruto</a>
+                    <li class="weap">
+                        <p class="bord">Filmes<a href="001.html">click aqui</a></p>
                     </li>
 
-                    <li>
-                        <a href="#">Guerras Clonicas</a>
+                    <li class="weap">
+                        <p class="bord">Series<a href="001.html">click aqui</a></p>
                     </li>
 
-                    <li>
-                        <a href="#">Bleach</a>
+                    <li class="weap">
+                        <p class="bord">Mangas e HQS<a href="001.html">click aqui</a></p>
                     </li>
 
                 </ul>
